# FedRAMP20xEngineering

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: frmr-sync.yml
docs/: architecture.md
docs/onboarding/: adding-a-new-slice.md  anatomy-of-a-slice.md  auto-sync.md  getting-started.md
engine/: _canonical.py  align.py  cli.py  collect.py  evaluate.py  evidence.py  report.py  slice.py
engine/render/: human.py  json.py  oscal.py  yaml.py
schemas/: evidence-record.schema.json  finding.schema.json  slice-mapping.schema.json
slices/_TEMPLATE/: README.md  mapping.yaml
slices/_fixture/: README.md  mapping.yaml
slices/iam-mfa/: README.md  mapping.yaml
tests/: test_align.py  test_canonical.py  test_cli.py  test_cli_config.py  test_collect.py  test_docs_present.py  test_evaluate.py  test_evidence.py  test_frmr_drift.py  test_iam_mfa_aws.py  test_iam_mfa_aws_iam.py  test_iam_mfa_e2e.py  test_iam_mfa_entra.py  test_iam_mfa_files.py  test_iam_mfa_gcp.py  test_iam_mfa_mapping.py  test_iam_mfa_okta.py  test_iam_mfa_policy.py  test_netrestrict_aws.py  test_netrestrict_aws_default_deny.py  test_netrestrict_azure.py  test_netrestrict_e2e.py  test_netrestrict_files.py  test_netrestrict_gcp.py  test_netrestrict_mapping.py  test_netrestrict_policy.py  test_render_human.py  test_render_machine.py  test_render_oscal.py  test_report.py  test_schemas.py  test_slice.py  test_sync.py  test_sync_baselines.py  test_sync_documentation.py  test_template_slice.py  test_workflow_present.py
tests/fixtures/: ksi_index.csv
tools/: frmr_drift.py  sync.py
(+34 files in other folders)
