[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fedramp20x-engineering"
version = "0.1.0"
description = "FedRAMP advisory + framework-agnostic evidence toolkit"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.21"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
okta = ["requests>=2.31"]
entra = ["msgraph-sdk>=1.0"]
aws = ["boto3>=1.34"]
gcp = ["google-api-python-client>=2.0", "google-auth>=2.0"]
collectors = [
  "requests>=2.31",
  "msgraph-sdk>=1.0",
  "boto3>=1.34",
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
]

[project.scripts]
fr20x = "engine.cli:main"

[tool.setuptools]
packages = ["engine", "engine.render", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
